--- a/jsr.jsonc
+++ b/jsr.jsonc
@@ -23,17 +23,23 @@
 			"**/bench.tsx",
 			"**/test.ts",
 			"**/test.tsx",
-			"npm/**",
-			".dnt.ts"
-		],
-		"include": [
-			"**/*.json",
-			"**/*.ts",
-			"**/*.tsx",
-			"**/*.wasm",
-			"jsr.jsonc",
-			"LICENSE*.md",
-			"README*.md"
+			"_bench/**",
+			"_test/**",
+			".forgejo/**",
+			".git/**",
+			".github/**",
+			".vscode/**",
+			"dist/**",
+			".*.lint.ts",
+			".dnt.ts",
+			".gitattributes",
+			".gitignore",
+			".yamllint.yml",
+			"CITATION.cff",
+			"CODE_OF_CONDUCT.md",
+			"CONTRIBUTING.md",
+			"deno.jsonc",
+			"SECURITY.md"
 		]
 	}
 }
