--- a/jsr.jsonc
+++ b/jsr.jsonc
@@ -1,10 +1,9 @@
 {
 	"$schema": "https://deno.land/x/deno/cli/schemas/config-file.v1.json",
 	"name": "@hugoalh/unique-array",
-	"version": "4.1.1",
+	"version": "5.0.0",
 	"exports": {
-		"./assert": "./assert.ts",
-		"./uniquify": "./uniquify.ts",
+		"./collector": "./collector.ts",
 		".": "./mod.ts"
 	},
 	"imports": {
